--- a/book/book.tex
+++ b/book/book.tex
@@ -3240,7 +3240,7 @@ La segunda mitad de esta función se parece a {\tt poligono}, pero
 no podemos reutilizar {\tt poligono} sin cambiar la interfaz.  Podríamos
 generalizar {\tt poligono} para que tome un angulo como tercer argumento,
 ¡pero entonces {\tt poligono} ya no sería un nombre apropiado!
-En cambio, llamemos a la función más general {\tt polilinea}:
+En cambio, llamemos {\tt polilinea} a la función más general: 
 
 \begin{verbatim}
 def polilinea(t, n, longitud, angulo):
@@ -3407,12 +3407,12 @@ general (como una variable o parámetro).
 \index{generalización}
 
 \item[argumento de palabra clave:] Un argumento que incluye el nombre del
-parámetro como ``palabra clave''.
+parámetro como si fuera ``palabra clave''.
 \index{argumento de palabra clave}
 \index{palabra clave!argumento de}
 
 \item[interfaz:] Una descripción de cómo usar una función, incluyendo
-el nombre y descripciones de los argumentos y valor de retorno.
+el nombre y descripciones de los argumentos y el valor de retorno.
 \index{interfaz}
 
 \item[refactorización:] El proceso de modificar un programa que funciona para
